error.txt
   Compiling esp-wifi v0.6.0
   Compiling esp-wifi-sys v0.3.0
error[E0583]: file not found for module `include`
  --> /Users/hott/.cargo/registry/src/index.crates.io-6f17d22bba15001f/esp-wifi-sys-0.3.0/src/lib.rs:14:1
   |
14 | pub mod include;
   | ^^^^^^^^^^^^^^^^
   |
   = help: to create the module `include`, create file "/Users/hott/.cargo/registry/src/index.crates.io-6f17d22bba15001f/esp-wifi-sys-0.3.0/src/include.rs" or "/Users/hott/.cargo/registry/src/index.crates.io-6f17d22bba15001f/esp-wifi-sys-0.3.0/src/include/mod.rs"
   = note: if there is a `mod include` elsewhere in the crate already, import it with `use crate::...` instead

For more information about this error, try `rustc --explain E0583`.
error: could not compile `esp-wifi-sys` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error[E0428]: the name `main` is defined multiple times
   --> /Users/hott/.cargo/registry/src/index.crates.io-6f17d22bba15001f/esp-wifi-0.6.0/build.rs:148:1
    |
3   | fn main() -> Result<(), String> {
    | ------------------------------- previous definition of the value `main` here
...
148 | fn main() {
    | ^^^^^^^^^ `main` redefined here
    |
    = note: `main` must be defined only once in the value namespace of this module



ERROR: expected exactly one enabled feature from feature group:
  ["esp32", "esp32c2", "esp32c3", "esp32c6", "esp32h2", "esp32s2", "esp32s3"]


error: could not compile `esp-wifi` (build script) due to 1 previous error